# task_tracker

./: .env.example  .gitignore  README.md  alembic.ini  config.py  docker-compose.yaml  pyproject.toml
app/: crud.py  database.py  main.py  models.py  router.py  schemas.py  serviсes.py
migrations/: env.py
migrations/versions/: 164e06254db4_update_base.py  a0914bc9e808_create_database.py  fae3d766a1b7_update_database.py
